# rust_roo_test

./: .gitignore  create_db.py  notes.txt  run_inference.py
programatic/: Cargo.toml  test.sql  test_clean_tables.sql
programatic/src/: generated_struct.rs  main.rs  schema.rs
testing/: Cargo.toml
testing/src/: main.rs
