[package]
name = "testing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
serde = {version = "1.0.219", features = ["derive"] }

serde_json = "1.0.140" 
tokio = {version = "1.44.2", features = ["full"]}

sqlx = { version = "0.8.5", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"]}
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = "0.4.8"
rust_decimal = "1.37.1"
